# Atlas-Engine

./: .ci-ignore  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md  THIRDPARTY.md  appveyor.yml  vcpkg.json  vsbuild.bat
demo/: App.cpp  App.h  CMakeLists.txt
dependencies/Glad/: CMakeLists.txt  glad.c
dependencies/Imgui/: CMakeLists.txt  ImguiOpenGL.cpp  ImguiOpenGL.h  ImguiWrapper.cpp  ImguiWrapper.h
libs/ImguiExtension/: CMakeLists.txt  ImguiOpenGL.cpp  ImguiVulkan.cpp  ImguiVulkan.h  ImguiWrapper.cpp  ImguiWrapper.h  Panels.h  UiElements.cpp  UiElements.h
libs/fsr2/: CMakeLists.txt  Main.cpp
src/: App.cpp  App.h  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Context.cpp  Context.h  Cubemap.cpp  Cubemap.h  Decal.cpp  Decal.h  Engine.cpp  Engine.h  EngineInstance.cpp  EngineInstance.h  Filter.cpp  Filter.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  FrustumCulling.cpp  FrustumCulling.h  Kernel.cpp  Kernel.h  Log.cpp  Log.h  Main.cpp  Main.h  Material.cpp  Material.h  Profiler.cpp  Profiler.h  RenderList.cpp  RenderList.h  RenderTarget.cpp  RenderTarget.h  (+18 more)
src/actor/: Actor.h  ActorBatch.h  AudioActor.cpp  AudioActor.h  DecalActor.cpp  DecalActor.h  MeshActor.cpp  MeshActor.h  MovableMeshActor.cpp  MovableMeshActor.h  StaticMeshActor.cpp  StaticMeshActor.h  VegetationActor.cpp
src/audio/: AudioData.cpp  AudioData.h  AudioManager.cpp  AudioManager.h  AudioStream.cpp  AudioStream.h
src/buffer/: Buffer.cpp  Buffer.h  BufferLock.cpp  BufferLock.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/common/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  Image.cpp  Image.h  MathHelper.h  MatrixDecomposition.cpp  MatrixDecomposition.h  NoiseGenerator.cpp  NoiseGenerator.h  Octree.h  Packing.cpp  Path.cpp  Path.h  Piecewise.cpp  RandomHelper.cpp  RandomHelper.h  Ray.cpp  Ray.h  SerializationHelper.h  Serializer.cpp  Serializer.h
src/demo/: App.cpp  App.h  CMakeLists.txt
src/ecs/: Entity.h  EntityManager.cpp  EntityManager.h  Pool.h  Pools.h  Storage.cpp  Storage.h  Subset.h  TypeIndex.h
src/editor/: App.cpp  App.h  BlockingOperation.h  CMakeLists.txt  Config.cpp  Config.h  Content.cpp  Content.h  ContentDiscovery.cpp  ContentDiscovery.h  DataCreator.cpp  DataCreator.h  FileImporter.cpp  FileImporter.h  Icons.cpp  Icons.h  Notifications.cpp  Notifications.h  Serialization.cpp  Serialization.h  Serializer.cpp  Serializer.h  Singletons.cpp  Singletons.h
src/engine/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Decal.h  Display.cpp  Display.h  Engine.cpp  Engine.h  EngineInstance.cpp  EngineInstance.h  Extensions.cpp  Extensions.h  Filter.cpp  Filter.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Log.cpp  Log.h  Main.cpp  Material.cpp  Material.h  Profiler.h  RenderList.cpp  RenderList.h  RenderTarget.cpp  RenderTarget.h  ResourceManager.cpp  ResourceManager.h  Serializer.cpp  Serializer.h  System.h  TypeFormat.h  Viewport.cpp  Viewport.h  (+2 more)
src/events/: AudioDeviceEvent.h  ClockEvent.h  ControllerAxisEvent.h  ControllerButtonEvent.h  ControllerDeviceEvent.h  DropEvent.h  EngineControllerAxisEvent.h  EngineControllerButtonEvent.h  EngineControllerDeviceEvent.h  EngineEventHandler.cpp  EngineEventHandler.h  EngineKeyboardEvent.h  EngineKeycodes.h  EngineMouseButtonEvent.h  EngineMouseMotionEvent.h  EngineMouseWheelEvent.h  EngineTextInputEvent.h  EngineWindowEvent.h  EventChannel.h  EventDelegate.h  EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  KeyboardEvent.h  Keycodes.h  MouseButtonEvent.h  MouseMotionEvent.h  MouseWheelEvent.h  SystemEventHandler.cpp  SystemEventHandler.h  SystemKeyboardEvent.h  SystemMouseButtonEvent.h  SystemMouseMotionEvent.h  SystemMouseWheelEvent.h  SystemWindowEvent.h  TextInputEvent.h  TouchEvent.h  WindowEvent.h
src/input/: Controller.cpp  Controller.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Touch.cpp  Touch.h
src/lighting/: AO.cpp  AO.h  DirectionalLight.cpp  DirectionalLight.h  EnvironmentProbe.cpp  EnvironmentProbe.h  Fog.h  ILight.h  IrradianceVolume.cpp  IrradianceVolume.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Reflection.h  SSAO.cpp  SSAO.h  Shadow.cpp  Shadow.h  Sky.cpp  Sky.h  Skybox.h  Volumetric.cpp  Volumetric.h
src/loader/: AssetLoader.cpp  AssetLoader.h  ImageLoader.cpp  ImageLoader.h  MaterialLoader.cpp  MaterialLoader.h  ModelLoader.cpp  ModelLoader.h  TerrainLoader.cpp  TerrainLoader.h
src/mesh/: Actor.cpp  Actor.h  ActorBatch.cpp  ActorBatch.h  DataComponent.h  Impostor.cpp  Impostor.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshActor.cpp  MeshActor.h  MeshActorBatch.cpp  MeshActorBatch.h  MeshData.cpp  MeshData.h  Packing.cpp  Packing.h  VegetationMesh.cpp  VegetationMesh.h
src/modules/: TerrainTool.cpp  TerrainTool.h
src/newscene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
src/ocean/: Ocean.cpp  Ocean.h  OceanNode.cpp  OceanNode.h  OceanSimulation.cpp  OceanSimulation.h
src/postprocessing/: ChromaticAberration.h  PostProcessing.cpp  PostProcessing.h  Sharpen.h  TAA.cpp  Vignette.h
src/renderer/: AORenderer.cpp  AtmosphereRenderer.cpp  AtmosphereRenderer.h  BVHRenderer.cpp  BVHRenderer.h  BlurRenderer.cpp  BlurRenderer.h  CPURayTracingRenderer.cpp  CPURayTracingRenderer.h  DDGIRenderer.cpp  DDGIRenderer.h  DecalRenderer.cpp  DecalRenderer.h  DirectionalLightRenderer.cpp  DirectionalLightRenderer.h  DirectionalShadowRenderer.cpp  DirectionalShadowRenderer.h  DirectionalVolumetricRenderer.cpp  DirectionalVolumetricRenderer.h  GBufferDownscaleRenderer.cpp  GBufferDownscaleRenderer.h  GPURayTracingRenderer.cpp  GPURayTracingRenderer.h  GeometryRenderer.cpp  GeometryRenderer.h  IRenderer.h  ImpostorRenderer.cpp  ImpostorRenderer.h  ImpostorShadowRenderer.cpp  ImpostorShadowRenderer.h  IndirectLightRenderer.cpp  IndirectLightRenderer.h  MasterRenderer.cpp  MasterRenderer.h  OceanRenderer.cpp  OceanRenderer.h  OpaqueRenderer.cpp  OpaqueRenderer.h  PathTracingRenderer.cpp  PointLightRenderer.cpp  (+32 more)
(+4940 files in other folders)
